data/derived/comb/progs/unify/prog5996.ml.out
Characters 70-77:
  let fixpoint (f,b) = let newFunc = (f b, b = f b = false ) in wwhile (newFunc, b);;
                                                                        ^^^^^^^
Error: This expression has type 'a * bool
       but an expression was expected of type 'b -> 'b * bool
